# lumina

./: .env.example  .gitignore  Dockerfile  LUMINA_PRD_v1.0.docx  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: cloud-run-backend.yaml  cloud-run-frontend.yaml  cloudbuild.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  Settings.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/lumina/: __init__.py
src/lumina/orbit/: __init__.py
tests/agency/application/: test_commands.py
tests/agency/domain/: test_entities.py  test_services.py
tests/auth/: test_auth.py
tests/beam/application/: test_commands.py
tests/beam/domain/: test_entities.py  test_services.py
tests/graph/application/: test_commands.py
tests/graph/domain/: test_entities.py  test_services.py
tests/infrastructure/alerting/: test_alerting.py
tests/infrastructure/cms/: test_cms.py
tests/infrastructure/graph/: test_neo4j_integration.py
tests/infrastructure/integrations/: test_integrations.py
tests/infrastructure/nlp/: test_answer_detector.py  test_citation_extractor.py  test_entity_recognizer.py  test_fact_extractor.py
tests/integration/: test_api.py
(+175 files in other folders)
